# databricks-agent-notebooks

./: .gitignore  CONTRIBUTING.md  FUTURE.md  Makefile  README.md
.github/workflows/: integration-ci.yml  publish.yml  python-ci.yml
contracts/: launcher-kernel-contract.schema.json
docs/: databricks-support-matrix.md  kernels.md  release.md  repo-layout.md  runtime-home.md
docs/plans/: 2026-03-22-agent-notebook-readiness-integration.md
jvm/: README.md
jvm/scala/: README.md
python/: LICENSE  README.md  pyproject.toml
python/scripts/: installed_artifact_installer_proof.py
python/src/databricks_agent_notebooks/: __init__.py  __main__.py  _build.py  _constants.py  cli.py  notebook_utils.py  pipeline.py
python/src/databricks_agent_notebooks/config/: __init__.py  file_refs.py  frontmatter.py  project.py  resolution.py
python/src/databricks_agent_notebooks/execution/: __init__.py  executor.py  injection.py  lineage.py  rendering.py
python/src/databricks_agent_notebooks/for_agents/: README.md  advanced_pipeline_concepts.md  agent_doctor.md  notebook_utils_guide.md  package_cell_instructions.md  scala_development.md
python/src/databricks_agent_notebooks/for_agents/examples/pipeline/: pipeline_demo.md
python/src/databricks_agent_notebooks/for_agents/examples/scala/: package_cells_scaffold.md
python/src/databricks_agent_notebooks/for_agents/examples/scala/src/api/implementation/: Api.scala
python/src/databricks_agent_notebooks/for_agents/examples/scala/src/api/stable/: Api.scala
python/src/databricks_agent_notebooks/for_agents/examples/smoke/: python_select_one.md  scala_select_one.md
python/src/databricks_agent_notebooks/for_agents/preprocessing/: README.md  plugins.md
python/src/databricks_agent_notebooks/for_agents/scripts/: agent-nb-run.sh
python/src/databricks_agent_notebooks/formats/: __init__.py  conversion.py  dbr_source.py
python/src/databricks_agent_notebooks/integrations/: __init__.py
python/src/databricks_agent_notebooks/integrations/databricks/: __init__.py  clusters.py
python/src/databricks_agent_notebooks/preprocessing/: __init__.py  builtins.py  docs.py  engine.py  errors.py
python/src/databricks_agent_notebooks/preprocessing/plugins/: __init__.py  best_practices.py  include.py  param.py
python/src/databricks_agent_notebooks/runtime/: __init__.py  connect.py  doctor.py  home.py  inventory.py  kernel.py  launcher.py  manifest.py  scala_connect.py
python/tests/: conftest.py
python/tests/integration/: conftest.py  test_cli_smoke.py  test_cluster_timeout.py  test_databricks_serverless.py  test_global_install.py  test_kernel_lifecycle.py  test_local_spark_execution.py
python/tests/integration/fixtures/notebooks/: error_python.md  local_spark_profile_python.md  local_spark_profile_scala.md  local_spark_python.md  multi_cell_python.md  render_test.ipynb  smoke_python.md  smoke_scala.md
python/tests/unit/: test_cli.py  test_config_file_refs.py  test_config_frontmatter.py  test_config_project.py  test_config_resolution.py  test_execution_executor.py  test_execution_injection.py  test_execution_rendering.py  test_formats_conversion.py  test_formats_dbr_source.py  test_installed_artifact_installer_proof.py  test_integrations_databricks_clusters.py  test_lifecycle_hooks.py  test_notebook_utils.py  test_pipeline.py  test_preprocessing.py  test_preprocessing_builtins.py  test_repo_layout.py  test_runtime_connect.py  test_runtime_doctor.py  test_runtime_home.py  test_runtime_inventory.py  test_runtime_kernel.py  test_runtime_launcher.py  test_runtime_manifests.py  test_runtime_scala_connect.py  test_version.py
scripts/hooks/: check-version-staleness  install-hooks  post-rewrite  reference-transaction
tmp/: agent-doctor-revised.md  clusters-streaming-review.md  prompt-migrate-to-uv.md  squash.sh
